// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Label > should render 1`] = `
<div>
  <div
    class="css-i6g9fr"
    color="primary"
  />
</div>
`;

exports[`Label > should render a large one 1`] = `
<div>
  <div
    class="css-fbj7dk"
    color="primary"
  />
</div>
`;

exports[`Label > should render a small one 1`] = `
<div>
  <div
    class="css-1ysecpq"
    color="primary"
  />
</div>
`;

exports[`Label > should render as solid 1`] = `
<div>
  <div
    class="css-1a7qe6v"
    color="primary"
  />
</div>
`;

exports[`Label > should render as solid and danger 1`] = `
<div>
  <div
    class="css-y2zu3w"
    color="danger"
  />
</div>
`;

exports[`Label > should render as solid and default 1`] = `
<div>
  <div
    class="css-1nwmp3b"
    color="neutral"
  />
</div>
`;

exports[`Label > should render as solid and primary 1`] = `
<div>
  <div
    class="css-1a7qe6v"
    color="primary"
  />
</div>
`;

exports[`Label > should render as solid and success 1`] = `
<div>
  <div
    class="css-1nwmp3b"
    color="success"
  />
</div>
`;

exports[`Label > should render danger color 1`] = `
<div>
  <div
    class="css-148b4hi"
    color="danger"
  />
</div>
`;

exports[`Label > should render neutral color 1`] = `
<div>
  <div
    class="css-vy12ck"
    color="neutral"
  />
</div>
`;

exports[`Label > should render primary color 1`] = `
<div>
  <div
    class="css-i6g9fr"
    color="primary"
  />
</div>
`;

exports[`Label > should render success color 1`] = `
<div>
  <div
    class="css-1v19423"
    color="success"
  />
</div>
`;

exports[`Label > should render warning color 1`] = `
<div>
  <div
    class="css-1w9fmip"
    color="warning"
  />
</div>
`;
